[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
prost = "0.12.4"
prost-types = "0.12.4"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tonic = { version = "0.11.0", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.11.0"
